--- a/static/css/matsvinn_style.css
+++ b/static/css/matsvinn_style.css
@@ -1,4 +1,18 @@
-/* Modal styling */
+
+.list
+{
+  list-style-type: none;
+}
+
+.btn-circle
+{
+  border-radius: 50% !important; /* !important to give highest priority*/
+  width: 30px;
+  height: 30px;
+}
+
+
+/* All modal styling */
 .cursor-pointer
 {
   cursor: pointer;
@@ -17,29 +31,218 @@
   cursor: pointer;
 }
 
-
-/* Add some basic styling for the options */
-.options {
+/* Styling for the options in expiration list */
+.options
+{
     display: none;
     list-style: none;
-    padding: 0;
-    margin: 0;
     position: absolute;
     background-color: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-
-    left: 40px;
-    /* border-radius: 10%;
-    border: 1.5px black solid; */
-  }
+    top: -10px;
+    right: -91px;
+    z-index: 100;
+}
+  /* To position options relative to settings icon */
+  .options-container
+  {
+    position: relative;
+  } 
 
   /* Style the options as buttons */
-  .options li {
+  .options li
+  {
     cursor: pointer;
     padding: 10px;
   }
 
   /* Style the options on hover */
-  .options li:hover {
+  .options li:hover
+  {
     background-color: #f0f0f0;
   }
+
+.settings_icon
+{
+  font-size: 15px;
+}
+
+.list-item {
+  cursor: pointer; /* Change cursor to pointer to indicate clickable */
+}
+
+.list-object.hovered {
+  text-decoration: underline; /* Underline the list item when hovered over */
+}
+
+/* CSS to create a border around the list container */
+.exp_list_div {
+  border: 2px solid #212529; /* Border style */
+  padding: 15px; /* Optional: Add padding inside the border */
+  display: inline-block;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-item {
+  grid-column: span 3;
+}
+
+th, td {
+  padding: 0px 50px;  /* Adjust the vertical and horizontal padding here */
+}
+th:first-child, td:first-child {
+  padding: 0;
+}
+
+.custom-hr {
+  border: none;
+  border-top: 2px solid #212529; /* Adjust thickness here */
+  margin: 10px 0; /* Adjust position by changing the margin */
+}
+.settings_icon {
+  width: 5px; /* Adjust the width as needed */
+  padding: 0px;
+}
+.options-container-parent {
+  padding: 0px;
+}
+
+input{
+  border-radius: 10px;
+  border: 1px solid;
+  border-color: #606060;
+  height: 40px;
+  font-weight: bold;
+  padding-left: 5px;
+  color:#212529
+}
+
+input:not(:placeholder-shown) {
+  background-color: #e3e3e3;
+  border-color: #c8c8c8;
+  font-weight: bold;
+}
+
+.modal-content{
+  border-radius: 0;
+  border: 1px solid;
+  border-color: #212529;
+}
+
+label{
+  font-weight: bold;
+}
+
+button{
+  border-radius: 10px;
+  border:none;
+  background-color: #0ad46d;
+  color: white;
+  font-weight: bold;
+  padding: 0px;
+  /* margin: 5px; */
+  width: 75px;
+  height: 37px;
+  transition: background-color 0.3s ease; /* Adding transition for smooth effect */
+}
+
+button:hover {
+  background-color: #129f56; /* Changing background color on hover */
+}
+button:active {
+  background-color: #14874c; /* Changing background color on hover */
+}
+
+.delete-button{
+  background-color: #d4220a;
+}
+
+.delete-button:hover{
+  background-color: #972314;
+}
+.delete-button:active{
+  background-color: #741f13;
+}
+
+.expired-text{
+  color: #d4220a;
+  font-weight: bold;
+}
+.warning-text{
+  color: #d4870a;
+  font-weight: bold;
+}
+
+.cancel-button{
+  background-color:white;
+  color:black;
+  border:1px solid;
+  font-weight:400;
+}
+.cancel-button:hover{
+  background-color: #d0d0d0;
+}
+.cancel-button:active{
+  background-color: #a3a3a3;
+}
+
+
+.form-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.form-group label {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.form-group input {
+  flex: 2;
+}
+
+.modal_close_button {
+  font-size:25px;
+  right:20px
+}
+
+.custom-select {
+  display: block;
+  width: 83%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #606060;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.custom-select:focus {
+  border-color: #212529;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.title-header{
+  text-align: center;
+  font-weight: bold;
+}
+
+.paragraph-container {
+  max-width: 800px; /* Adjust the max-width as needed */
+  margin: 0 auto; /* Center-align the paragraph */
+}
